2004-05-18  Larry Ewing  <lewing@ximian.com>

	* htmlselection.c (html_engine_is_selection_active): revert the
	last change because it breaks copy/paste selection handling in the
	mail view. See #58607

2004-05-17  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (html_image_pointer_update): check that engine->clue
	is image's parent before asking for redraw

	* htmlobject.c (op_cut): set change to parent object and set its
	width to zero to force redraw
	(merge): ditto

	Fixes #56545

	* htmlgdkpainter.c (alloc_font): as below

	* htmlclueflow.c (pref_right_margin): calculate the width as
	MAX(width of space, width of e) for plain painter so that we get
	"better" results in case user sets proportional font for fixed
	width style

	* htmlprinter.c (alloc_font): as below

	* htmlgdkpainter.c (alloc_font): pass width of 'e' character to
	html_font_new

	* htmlpainter.c (html_painter_get_e_width): new helper function

	* htmlfontmanager.c (html_font_new): added e_width parameter

	* htmlfontmanager.h: cache width of char 'e'

	Fixes a case when we have a proportional font set for fixed style
	font, it's only a semisolution but it will save us hopefully a lot
	of user questions

	* htmlengine.c (element_parse_li): in case we are adding to
	toplevel blockquote flow, change it's type to unordered list
	(element_parse_blockquote): pop ID_LI in case we had <LI> items
	inside blockquote flow
	(element_parse_ol): moved few lines so that they are consitent
	with UL and BLOCKQUOTE
	(element_parse_ul): ditto

	Fixes nested item lists parsing

	* gtkhtmldebug.c (gtk_html_debug_dump_object): print levels

2004-05-14  Radek Doulik  <rodo@ximian.com>

	* htmlselection.c (html_engine_is_selection_active): check for
	mark as well, it should be non-null, but it looks like in some
	situations it isn't. I am unable to reproduce that problem
	occuring in #44521. This change should avoid the crash at least. I
	hope it may give us some idea how does it happen.
